KisClipboard: fix typo in default source selection

BUG: 456382